; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_cipherlist_test.c_set_up.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_cipherlist_test.c_set_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i8*, %struct.TYPE_7__*, %struct.TYPE_7__* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_7__* (i8*)* @set_up to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_7__* @set_up(i8* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_7__*, align 8
  store i8* %0, i8** %3, align 8
  %5 = call %struct.TYPE_7__* @OPENSSL_zalloc(i32 24)
  store %struct.TYPE_7__* %5, %struct.TYPE_7__** %4, align 8
  %6 = call i32 @TEST_ptr(%struct.TYPE_7__* %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store %struct.TYPE_7__* null, %struct.TYPE_7__** %2, align 8
  br label %31

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 0
  store i8* %10, i8** %12, align 8
  %13 = call i32 (...) @TLS_server_method()
  %14 = call %struct.TYPE_7__* @SSL_CTX_new(i32 %13)
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 2
  store %struct.TYPE_7__* %14, %struct.TYPE_7__** %16, align 8
  %17 = call i32 @TEST_ptr(%struct.TYPE_7__* %14)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %26

19:                                               ; preds = %9
  %20 = call i32 (...) @TLS_client_method()
  %21 = call %struct.TYPE_7__* @SSL_CTX_new(i32 %20)
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 1
  store %struct.TYPE_7__* %21, %struct.TYPE_7__** %23, align 8
  %24 = call i32 @TEST_ptr(%struct.TYPE_7__* %21)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %29, label %26

26:                                               ; preds = %19, %9
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %28 = call i32 @tear_down(%struct.TYPE_7__* %27)
  store %struct.TYPE_7__* null, %struct.TYPE_7__** %2, align 8
  br label %31

29:                                               ; preds = %19
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  store %struct.TYPE_7__* %30, %struct.TYPE_7__** %2, align 8
  br label %31

31:                                               ; preds = %29, %26, %8
  %32 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  ret %struct.TYPE_7__* %32
}

declare dso_local i32 @TEST_ptr(%struct.TYPE_7__*) #1

declare dso_local %struct.TYPE_7__* @OPENSSL_zalloc(i32) #1

declare dso_local %struct.TYPE_7__* @SSL_CTX_new(i32) #1

declare dso_local i32 @TLS_server_method(...) #1

declare dso_local i32 @TLS_client_method(...) #1

declare dso_local i32 @tear_down(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
